add post method and documentation
