# backend/models/Message.ts
@@ -1,19 +1,32 @@
 import {Model} from "./Model";
 import {User} from "./User";
 
-export class Message extends Model{
-    table:string = 'messages';
-    from: User|undefined;
-    datetime: Date|undefined;
-    text: string|undefined;
-    read: boolean|undefined;
-    chat_id: number|undefined;
+enum MessageType {
+    'info', 'text', 'image', 'video', 'link', 'document', 'resend'
+}
+
+export class Message extends Model {
+    table: string = 'messages';
+    user_id: User | undefined;
+    datetime: Date | undefined;
+    type: MessageType | undefined;
+    value: string | undefined;
+    read: boolean | undefined;
+    chat_id: number | undefined;
+
+    validate(obj: Record<string, any>): [boolean, string] {
+        if (typeof obj.type !== 'string' || !Object.values(MessageType).includes(obj.type as string)) throw new Error('ERROR: field "type" must be string in enum');
+        if (typeof obj.value !== 'string' || obj.value.trim() === '') throw new Error('ERROR: field "value" must be not null string!');
+        if (typeof obj.chat_id !== 'number' || !Number.isInteger(obj.chat_id)) throw new Error('ERROR: field "chat_id" must be not null number!');
+        return [true, 'Correct object!'];
+    }
 
     getObject(): object {
         return {
-            from: this.from,
+            user: this.user_id,
             datetime: this.datetime,
-            text: this.text,
+            type: this.type,
+            value: this.value,
             read: this.read,
             chat_id: this.chat_id,
         };
